--- a/templates/DailyMint/css/styles.css
+++ b/templates/DailyMint/css/styles.css
@@ -1,11 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mint</title>
-  <style type="text/css">
 /* ! tailwindcss v3.0.24 | MIT License | https://tailwindcss.com */
 
 /*
@@ -467,89 +459,56 @@ Ensure the default browser behavior of the `hidden` attribute.
   position: relative;
 }
 
-.top-0 {
-  top: 0px;
+.-bottom-2 {
+  bottom: -0.5rem;
 }
 
-.right-0 {
-  right: 0px;
-}
-
-.-bottom-10 {
-  bottom: -2.5rem;
-}
-
-.-right-10 {
-  right: -2.5rem;
-}
-
-.bottom-12 {
-  bottom: 3rem;
-}
-
-.col-span-2 {
-  grid-column: span 2 / span 2;
-}
-
-.col-span-3 {
-  grid-column: span 3 / span 3;
-}
-
-.my-auto {
-  margin-top: auto;
-  margin-bottom: auto;
+.z-10 {
+  z-index: 10;
 }
 
 .flex {
   display: flex;
 }
 
-.grid {
-  display: grid;
+.h-\[560px\] {
+  height: 560px;
 }
 
-.h-\[506px\] {
-  height: 506px;
+.h-12 {
+  height: 3rem;
 }
 
-.h-full {
-  height: 100%;
+.h-36 {
+  height: 9rem;
 }
 
-.h-\[320px\] {
-  height: 320px;
-}
-
-.h-\[240px\] {
-  height: 240px;
-}
-
-.h-\[300px\] {
-  height: 300px;
+.min-h-\[420px\] {
+  min-height: 420px;
 }
 
 .w-\[1012px\] {
   width: 1012px;
 }
 
-.w-\[240px\] {
-  width: 240px;
+.w-12 {
+  width: 3rem;
 }
 
-.w-\[300px\] {
-  width: 300px;
+.w-36 {
+  width: 9rem;
 }
 
 .max-w-max {
   max-width: max-content;
 }
 
-.grid-cols-5 {
-  grid-template-columns: repeat(5, minmax(0, 1fr));
-}
-
 .flex-col {
   flex-direction: column;
+}
+
+.flex-wrap {
+  flex-wrap: wrap;
 }
 
 .items-center {
@@ -560,50 +519,48 @@ Ensure the default browser behavior of the `hidden` attribute.
   justify-content: center;
 }
 
-.gap-12 {
-  gap: 3rem;
+.justify-between {
+  justify-content: space-between;
 }
 
 .gap-4 {
   gap: 1rem;
 }
 
-.gap-8 {
-  gap: 2rem;
+.gap-2 {
+  gap: 0.5rem;
+}
+
+.gap-x-24 {
+  column-gap: 6rem;
+}
+
+.gap-y-8 {
+  row-gap: 2rem;
+}
+
+.divide-x > :not([hidden]) ~ :not([hidden]) {
+  --tw-divide-x-reverse: 0;
+  border-right-width: calc(1px * var(--tw-divide-x-reverse));
+  border-left-width: calc(1px * calc(1 - var(--tw-divide-x-reverse)));
+}
+
+.divide-neutral-400 > :not([hidden]) ~ :not([hidden]) {
+  --tw-divide-opacity: 1;
+  border-color: rgb(163 163 163 / var(--tw-divide-opacity));
 }
 
 .overflow-hidden {
   overflow: hidden;
 }
 
-.rounded-xl {
-  border-radius: 0.75rem;
+.rounded-full {
+  border-radius: 9999px;
 }
 
-.rounded-bl-full {
-  border-bottom-left-radius: 9999px;
-}
-
-.border {
-  border-width: 1px;
-}
-
-.border-neutral-100 {
-  --tw-border-opacity: 1;
-  border-color: rgb(245 245 245 / var(--tw-border-opacity));
-}
-
-.border-neutral-200 {
-  --tw-border-opacity: 1;
-  border-color: rgb(229 229 229 / var(--tw-border-opacity));
-}
-
-.bg-\[\#292929\]\/50 {
-  background-color: rgb(41 41 41 / 0.5);
-}
-
-.bg-neutral-200\/10 {
-  background-color: rgb(229 229 229 / 0.1);
+.bg-neutral-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 229 229 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-b {
@@ -623,48 +580,37 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-gradient-to: #0C0025;
 }
 
-.p-14 {
-  padding: 3.5rem;
-}
-
 .p-6 {
   padding: 1.5rem;
 }
 
-.p-2 {
-  padding: 0.5rem;
+.px-12 {
+  padding-left: 3rem;
+  padding-right: 3rem;
 }
 
-.p-4 {
-  padding: 1rem;
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
-.px-8 {
-  padding-left: 2rem;
-  padding-right: 2rem;
+.text-center {
+  text-align: center;
 }
 
-.pt-4 {
-  padding-top: 1rem;
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 
-.pl-6 {
-  padding-left: 1.5rem;
-}
-
-.text-6xl {
-  font-size: 3.75rem;
-  line-height: 1;
-}
-
-.text-8xl {
-  font-size: 6rem;
-  line-height: 1;
-}
-
-.text-xl {
-  font-size: 1.25rem;
+.text-lg {
+  font-size: 1.125rem;
   line-height: 1.75rem;
+}
+
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
 }
 
 .font-bold {
@@ -676,49 +622,28 @@ Ensure the default browser behavior of the `hidden` attribute.
   color: rgb(245 245 245 / var(--tw-text-opacity));
 }
 
-.text-neutral-100\/10 {
-  color: rgb(245 245 245 / 0.1);
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.opacity-10 {
-  opacity: 0.1;
+.text-indigo-900 {
+  --tw-text-opacity: 1;
+  color: rgb(49 46 129 / var(--tw-text-opacity));
 }
 
-.opacity-50 {
-  opacity: 0.5;
+.text-neutral-400 {
+  --tw-text-opacity: 1;
+  color: rgb(163 163 163 / var(--tw-text-opacity));
 }
 
-.card-shadow {
-  box-shadow: 0px 0px 25px #ffffff;
+.ring-4 {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
-  </style>
-</head>
-<body class="w-[1012px]">
-  <div class="relative h-[506px] w-[1012px] overflow-hidden bg-gradient-to-b from-[#0C0025] via-[#160044] to-[#0C0025] p-14">
-    <div class="grid h-full grid-cols-5 gap-12">
-      <div class="card-shadow col-span-2 my-auto flex h-[320px] max-w-max flex-col gap-4 rounded-xl border border-neutral-100 bg-[#292929]/50 p-6 pt-4">
-        <span class="font-bold text-neutral-100">{{name}}</span>
-        <img class="h-[240px] w-[240px] rounded-xl" src="{{imageURI}}" alt="" />
-      </div>
-      <div class="col-span-3 flex flex-col justify-center gap-8">
-        <span class="text-6xl font-bold text-neutral-100">{{name}}</span>
-        <span class="text-8xl font-bold text-neutral-100/10">MINT</span>
-        <div class="flex max-w-max items-center justify-center rounded-xl border border-neutral-200 bg-[#292929]/50 p-2 px-8">
-          <span class="font-bold text-neutral-100">{{websiteURL}}</span>
-        </div>
-      </div>
-      <div class="absolute top-0 right-0">
-        <div class="rounded-bl-full bg-neutral-200/10 p-4">
-          <span class="pl-6 text-xl font-bold text-neutral-100">{{mintDate}}</span>
-        </div>
-      </div>
-      <div class="absolute -bottom-10 -right-10">
-        <img class="h-[300px] w-[300px] opacity-10" src="{{blockchain}}" alt="" />
-      </div>
-      <div class="absolute bottom-12">
-        <img class="opacity-50" src="https://thunft.vercel.app/assets/images/Logo.svg" alt="" />
-      </div>
-    </div>
-  </div>
-</body>
-</html>
+
+.ring-neutral-200 {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(229 229 229 / var(--tw-ring-opacity));
+}
